--- a/Mi_agenda/index.html
+++ b/Mi_agenda/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Agenda Multicapas</title>
-  <link rel="stylesheet" href="estilos.css" />
+  <title>📒 Mi Agenda Personal</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>📒 Mi agenda WEB</h1>
+  <div class="agenda">
+    <h1>📒 Mi Agenda Personal</h1>
 
     <form id="formulario">
       <input type="text" id="nombre" placeholder="Nombre" required />
-      <input type="text" id="apellido" placeholder="Apellido" required />
+      <input type="text" id="apellidos" placeholder="Apellidos" required />
       <input type="tel" id="telefono" placeholder="Teléfono" required />
       <button type="submit">Agregar contacto</button>
     </form>
